swagger endpoints edited
